--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,5 @@ on:
 
 jobs:
   call-docker-build:
-    uses: ./.github/workflows/build-docker.yml
+    #uses: ./.github/workflows/build-docker.yml
+    uses: ./demo/.github/workflows/build-docker.yml
