--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ on:
 jobs:
   call-docker-build:
     #uses: ./.github/workflows/build-docker.yml
-    uses: ./demo/.github/workflows/builddocker.yml
+    uses: ./.github/workflows/builddocker.yml
