--- a/demo/.github/workflows/mainwflw.yml
+++ b/demo/.github/workflows/mainwflw.yml
@@ -3,7 +3,7 @@ name: Main Workflow
 
 #on:
 #  push:
-#    branches: [ main ]
+#    branches: [ main 
 #  pull_request:
 #    branches: [ main ]
 on:
